todolist-goof/k8s/java-goof.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: goof
  name: goof
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goof
  template:
    metadata:
      labels:
        app: goof
    spec:
      containers:
      - image: ${DOCKER_ACCOUNT}/java-goof:latest
        imagePullPolicy: Always
        name: java-goof
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goof
  name: goof
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: goof
